Fixed overflow in card description

--- a/src/app/pages/timeline/components/fragments/tasklet/tasklet-card-fragment/tasklet-card-fragment.component.scss
+++ b/src/app/pages/timeline/components/fragments/tasklet/tasklet-card-fragment/tasklet-card-fragment.component.scss
@@ -10,6 +10,11 @@
   font-size: 1.2em;
 }
 
+.content {
+  width: 100%;
+  overflow: hidden;
+}
+
 .project {
   padding: 3px 10px;
   margin-top: -25px;
